--- a/RoboControl/mainwindow.ui
+++ b/RoboControl/mainwindow.ui
@@ -116,7 +116,7 @@
                  <string>↑</string>
                 </property>
                 <property name="shortcut">
-                 <string>Up, W</string>
+                 <string>Up</string>
                 </property>
                </widget>
               </item>
@@ -143,7 +143,7 @@
                  <string>←</string>
                 </property>
                 <property name="shortcut">
-                 <string>A, Left</string>
+                 <string>Left</string>
                 </property>
                </widget>
               </item>
@@ -166,7 +166,7 @@
                  <string>↓</string>
                 </property>
                 <property name="shortcut">
-                 <string>Down, S</string>
+                 <string>Down</string>
                 </property>
                </widget>
               </item>
@@ -189,7 +189,7 @@
                  <string>→</string>
                 </property>
                 <property name="shortcut">
-                 <string>D, Right</string>
+                 <string>Right</string>
                 </property>
                </widget>
               </item>
@@ -226,7 +226,7 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
-           <widget class="QLineEdit" name="lineEditUart"/>
+           <widget class="QLineEdit" name="commandLine"/>
           </item>
           <item>
            <widget class="QToolButton" name="toolButtonSend">
@@ -277,7 +277,7 @@
              </size>
             </property>
             <property name="inputMask">
-             <string>000.000.000.000;_</string>
+             <string>000.000.000.000; </string>
             </property>
             <property name="text">
              <string>192.168.1.2</string>
@@ -366,14 +366,14 @@
      <x>0</x>
      <y>0</y>
      <width>680</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
-  <tabstop>lineEditUart</tabstop>
+  <tabstop>commandLine</tabstop>
   <tabstop>toolButtonSend</tabstop>
   <tabstop>toolButtonUp</tabstop>
   <tabstop>toolButtonDown</tabstop>
